--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <main id="inicio" class="cabecalho">
-        <img src="img/karol.jpg" alt="Foto de Karolyne Mirella" class="foto-perfil">
+        <img src="img/karolia.jpg" alt="Foto de Karolyne Mirella" class="foto-perfil">
         <h1>Karolyne Mirella</h1>
         <p class="cabecalho-sub-titulo">Desenvolvedora Full Stack em Formação</p>
     </main>
